samples/_failures_safe/1761174684_c98bb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f3d38de.c: In function ‘main’:
./samples/SAFE/__tmp_1f3d38de.c:116:9: error: expected declaration or statement at end of input
  116 |         if (strlen(line) == 0) {
      |         ^~
./samples/SAFE/__tmp_1f3d38de.c:116:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f3d38de.c:116:9: error: expected declaration or statement at end of input
